2011-02-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* *: **** Release 1102 ****

2011-02-05  Desmond O. Chang <dochang@gmail.com>

	* src/keysyms.lisp: Add extended keysyms from stumpwm.

2011-02-01  Desmond O. Chang <dochang@gmail.com>

	* src/clfswm-util.lisp (run-or-raise): New function (thanks to
	Desmond O. Chang).

	* src/clfswm-internal.lisp (with-all-*): add a nil block.

2011-01-28  Desmond O. Chang <dochang@gmail.com>

	* src/clfswm-util.lisp (xdg-config-home): XDG_CONFIG_HOME should
	be $HOME/.config by default.

2010-12-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp (display-doc): Add another method where a
	CLFSWM native window is used to display the key documentation.

2010-12-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Force to revert to the
	main mode state.

2010-12-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (second-key-mode): Call the second
	mode leave function only when the generic mode was ended.

2010-12-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (sm-leave-function): Do not use
	*second-mode-program* anymore.

2010-12-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (*second-mode-leave-function*): New
	variable bound to a function executed (when not null) on second
	mode leaving.

2010-11-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (find-child-under-mouse): Do not find
	hidden windows.

2010-11-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-mode-display-accel-windows):
	Do not display the accel window for unmanaged windows.

2010-11-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (set-current-root): Handle
	window-parent in set-current-root.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Do not